syntax = "proto3";

package types;

option go_package = "github.com/singerdmx/BulletJournal/protobuf/daemon/grpc/types";
option java_multiple_files = true;
option java_package = "com.bulletjournal.protobuf.daemon.grpc.types";
option java_outer_classname = "SubscribeNotificationProto";

message SubscribeNotificationMsg {
  string serviceName = 1;
  string clientId = 2;
}

message NotificationStreamMsg {
  oneof body {
    SubscribeRenewGoogleCalendarWatchMsg renewGoogleCalendarWatchMsg = 1;
    SubscribeSampleTaskMsg sampleTaskMsg = 2;
  }
}

message SubscribeRenewGoogleCalendarWatchMsg {
  string googleCalendarProjectId = 1;
}

message SubscribeSampleTaskMsg {
  uint64 sampleTaskId = 1;
}